tests/snapshots/v1_compatibility__policy_FirstMatch { priority: ["source1", "source2"] }.snap
---
source: tests/v1_compatibility.rs
expression: deserialized
---
type: firstMatch
priority:
  - source1
  - source2
