tests/snapshots/v1_compatibility__v1_query_plan_validation.snap
---
source: tests/v1_compatibility.rs
expression: validation_result.unwrap_err().to_string()
---
QueryPlan must have at least one data source
